# py-slug

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml
src/philiprehberger_slug/: __init__.py
tests/: test_slug.py
